local network icon if connecting from localhost

--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -8,7 +8,7 @@
 		<tbody>
 			{{ range . }}
 			<tr>
-				<td><img src="static/images/flags/{{ .CountryCode }}.png"> {{ .Country }}</td>
+				<td><img src="static/images/flags/{{ .GetFlagName }}.png"> {{ .Country }}</td>
 				<td>{{ .GetDisplayHost }}</td>
 				<td>{{ .Computer.GetDisplayName }}</td>
 			</tr>
