--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -4,13 +4,15 @@
 			<th>Country</th>
 			<th>Host</th>
 			<th>User@Computer</th>
+			<th>Ping</th>
 		</thead>
 		<tbody>
 			{{ range . }}
 			<tr>
-				<td><img src="static/images/flags/{{ .GetFlagName }}.png"> {{ .Country }}</td>
+				<td><img src="static/images/flags/{{ .GetFlagName }}.png"> {{ .GetCountry }}</td>
 				<td>{{ .GetDisplayHost }}</td>
 				<td>{{ .Computer.GetDisplayName }}</td>
+				<td>{{ .Ping.Current }}</td>
 			</tr>
 			{{ end }}
 		</tbody>
