--- a/command/templates/template.html
+++ b/command/templates/template.html
@@ -5,6 +5,7 @@
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="static/live.js"></script>
+	<script src="static/ping.js"></script>
 </head>
 <body>
 	{{ end }}
