--- a/command/static/css/index.css
+++ b/command/static/css/index.css
@@ -13,3 +13,27 @@ td, th {
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+
+.ping-0::before {
+	content:url("../images/ping/ping0.png");
+}
+
+.ping-1::before {
+	content:url("../images/ping/ping1.png");
+}
+
+.ping-2::before {
+	content:url("../images/ping/ping2.png");
+}
+
+.ping-3::before {
+	content:url("../images/ping/ping3.png");
+}
+
+.ping-4::before {
+	content:url("../images/ping/ping4.png");
+}
+
+.ping-5::before {
+	content:url("../images/ping/ping5.png");
+}
