--- a/command/templates/index.html
+++ b/command/templates/index.html
@@ -5,6 +5,7 @@
 			<th>Host</th>
 			<th>User@Computer</th>
 			<th>Ping</th>
+			<th></th>
 		</thead>
 		<tbody>
 			{{ range . }}
@@ -13,6 +14,7 @@
 				<td>{{ .GetDisplayHost }}</td>
 				<td>{{ .Computer.GetDisplayName }}</td>
 				<td class="ping"> {{ .Ping.Current }}</td>
+				<td><a href="screen?id={{ .Id }}">Screen</td>
 			</tr>
 			{{ end }}
 		</tbody>
