--- a/command/web/static/css/index.css
+++ b/command/web/static/css/index.css
@@ -51,6 +51,10 @@ tr:nth-child(even) {
 	bottom: 0;
 }
 
+.statusbar p {
+	display: inline-block;
+}
+
 .version::before {
 	content: "version: ";
 }
