--- a/command/web/static/css/terminal.css
+++ b/command/web/static/css/terminal.css
@@ -1,6 +1,19 @@
 #terminal {
+	background-color: #002B36;
+}
+
+#display {
 	font-family: consolas;
 	font-size: 14px;
-	background-color: #000000;
+	background-color: #002B36;
 	color: #ffffff;
+	width: 100%;
+	height: 100%;
+}
+
+#command {
+	position: fixed;
+	left: 0px;
+	bottom: 0px;
+	width: 100%;
 }
