web: uninstall client from context menu

--- a/command/web/static/templates/clients.html
+++ b/command/web/static/templates/clients.html
@@ -25,8 +25,6 @@
                 <li><a tabindex="-1" id="item-view-windows">Windows List</a></li>
             </ul>
         </li>
-        
-        <li class="divider"></li>
 
         <li class="dropdown-submenu">
             <a tabindex="-1" id="item-system">System <span class="caret"></span></a>
@@ -36,6 +34,9 @@
             </ul>
         </li>
 
+        <li class="divider"></li>        
+
+        <li id="item-uninstall"><a tabindex="-1">Uninstall</a></li>
         <li id="item-disconnect"><a tabindex="-1">Disconnect</a></li>
     </ul>
 </div>
